fixed table overflow (even though I'm about to delete the table)

--- a/www/style.css
+++ b/www/style.css
@@ -1,6 +1,7 @@
 .overflowXY {
   overflow-x: scroll;
   overflow-y: scroll;
+  height:300px;
 }
 
 .overflowX {
